# gSLICr

./: CMakeLists.txt  README.md  run_segmenter.py
cmake/: CMakeUninstall.cmake
src/: CMakeLists.txt
src/core/: CMakeLists.txt  image_segmenter.cpp  image_segmenter.h  options.h  recursive_image_segmenter.cpp  recursive_image_segmenter.h  segmenter.h  util.h  video_segmenter.cpp  video_segmenter.h
src/exe/: CMakeLists.txt  slic_image_segmenter.cpp  slic_video_segmenter.cpp
src/gSLICr/: CMakeLists.txt
src/gSLICr/ORUtils/: CUDADefines.h
src/gSLICr/gSLICr_Lib/engines/: gSLICr_core_engine.cpp  gSLICr_core_engine.h  gSLICr_seg_engine.h  gSLICr_seg_engine_GPU.cu  gSLICr_seg_engine_GPU.h  gSLICr_seg_engine_shared.h
